[package]
name = "human-units"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde"]
no_std = []

[dependencies]
serde = { version = "1.0.210", features = ["derive"], optional = true }

[dev-dependencies]
arbitrary = { version = "1.3.2", features = ["derive", "derive_arbitrary"] }
arbtest = "0.3.1"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
toml = "0.8.19"
