[package]
name = "human-units"
version = "0.1.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/igankevich/human-units"
repository = "https://github.com/igankevich/human-units"
readme = "README.md"
description = "Size and duration serialization library designed for configuration files and command line arguments"
keywords = ["format", "duration", "bytes", "configuration", "serialization"]
categories = ["encoding", "value-formatting", "config", "data-structures"]
include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[package.metadata.docs.rs]
rustc-args = ["--features", "serde"]

[features]
default = []
serde = ["dep:serde"]
no_std = []

[dependencies]
serde = { version = "1.0.210", features = ["derive"], optional = true }

[dev-dependencies]
arbitrary = { version = "1.3.2", features = ["derive", "derive_arbitrary"] }
arbtest = "0.3.1"
colored = "2.1.0"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[lints.rust]
missing_docs = "warn"
